// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageGovernance disables proposal creation if not connected 1`] = `
"<div class=\\"tm-page governance\\" data-title=\\"Governance\\">
   <header class=\\"tm-page-header\\">
      <div class=\\"tm-page-header-container\\">
         <div class=\\"tm-page-header-text\\">
            <!---->
            <!---->
            <div class=\\"tm-page-header-body\\">
               <div class=\\"header-balance\\">
                  <div class=\\"top\\">
                     <div class=\\"icon-container\\">
                        <img src=\\"~assets/images/cosmos-logo.png\\" class=\\"icon\\">
                     </div>
   <div class=\\"total-atoms top-section\\">
      <h3>
         Total STAKE
      </h3>
      <h2 class=\\"total-atoms__value\\">
         1,337.0000…
      </h2>
</div>
   <div class=\\"unbonded-atoms top-section\\">
      <h3>
         Available STAKE
      </h3>
      <h2>
         1,337.0000…
      </h2>
</div>
</div>
   <div class=\\"short-bech32\\">
      <div id=\\"address\\" class=\\"address\\">
         cosmos…xxn9  
      </div>
   <div class=\\"copied\\">
      <i class=\\"material-icons\\">check</i><span>Copied</span>
   </div>
</div>
   <div class=\\"tabs\\">
      <div class=\\"tab\\">
         <router-link to=\\"[object Object]\\">
            Proposals
         </router-link>
</div>
</div>
   <button class=\\"tm-btn\\" id=\\"propose-btn\\" disabled=\\"disabled\\"><span class=\\"tm-btn__container tm-btn--primary\\">
   <!---->
   <!---->
   <span class=\\"tm-btn__value\\">Connecting...</span></span></button>
</div>
   <div class=\\"tm-tool-bar\\">
      <a disabled=\\"disabled\\" class=\\"back\\"><i class=\\"material-icons\\">arrow_back</i></a><a><i class=\\"search material-icons\\">search</i></a><a class=\\"help\\"><i class=\\"material-icons\\">help_outline</i></a>
      <router-link id=\\"settings\\" to=\\"/preferences\\">
         <i class=\\"material-icons\\">settings</i>
      </router-link>
      <a id=\\"signOut-btn\\"><i class=\\"material-icons\\">exit_to_app</i></a>
   </div>
</div>
</div>
   <menu class=\\"tm-page-header-menu\\">
      <div></div>
</menu>
</div>
</header>
<main class=\\"tm-page-main\\">
   <!---->
   <!---->
   <router-view></router-view>
</main>
</div>"
`;

exports[`PageGovernance has the expected html structure 1`] = `
"<div class=\\"tm-page governance\\" data-title=\\"Governance\\">
   <header class=\\"tm-page-header\\">
      <div class=\\"tm-page-header-container\\">
         <div class=\\"tm-page-header-text\\">
            <!---->
            <!---->
            <div class=\\"tm-page-header-body\\">
               <div class=\\"header-balance\\">
                  <div class=\\"top\\">
                     <div class=\\"icon-container\\">
                        <img src=\\"~assets/images/cosmos-logo.png\\" class=\\"icon\\">
                     </div>
   <div class=\\"total-atoms top-section\\">
      <h3>
         Total STAKE
      </h3>
      <h2 class=\\"total-atoms__value\\">
         1,351.0000…
      </h2>
</div>
   <div class=\\"unbonded-atoms top-section\\">
      <h3>
         Available STAKE
      </h3>
      <h2>
         1,337.0000…
      </h2>
</div>
</div>
   <div class=\\"short-bech32\\">
      <div id=\\"address\\" class=\\"address\\">
         cosmos…xxn9  
      </div>
   <div class=\\"copied\\">
      <i class=\\"material-icons\\">check</i><span>Copied</span>
   </div>
</div>
   <div class=\\"tabs\\">
      <div class=\\"tab\\">
         <router-link to=\\"[object Object]\\">
            Proposals
         </router-link>
</div>
</div>
   <button class=\\"tm-btn\\" id=\\"propose-btn\\"><span class=\\"tm-btn__container tm-btn--primary\\">
   <!---->
   <!---->
   <span class=\\"tm-btn__value\\">Create Proposal</span></span></button>
</div>
   <div class=\\"tm-tool-bar\\">
      <a disabled=\\"disabled\\" class=\\"back\\"><i class=\\"material-icons\\">arrow_back</i></a><a><i class=\\"search material-icons\\">search</i></a><a class=\\"help\\"><i class=\\"material-icons\\">help_outline</i></a>
      <router-link id=\\"settings\\" to=\\"/preferences\\">
         <i class=\\"material-icons\\">settings</i>
      </router-link>
      <a id=\\"signOut-btn\\"><i class=\\"material-icons\\">exit_to_app</i></a>
   </div>
</div>
</div>
   <menu class=\\"tm-page-header-menu\\">
      <div></div>
</menu>
</div>
</header>
<main class=\\"tm-page-main\\">
   <!---->
   <!---->
   <router-view></router-view>
</main>
</div>"
`;
